--- a/content/(content)/labs/example.mdx
+++ b/content/(content)/labs/example.mdx
@@ -4,7 +4,7 @@ description: Code exploration and examples
 date: 2025-12-14
 ---
 
-Welcome to the labs! You can explore code examples and experiments in `/content/labs`.
+Welcome to the labs! You can explore code examples and experiments in `/content/(content)/labs`.
 
 ## Code Block
 
