--- a/content/(content)/articles/example.mdx
+++ b/content/(content)/articles/example.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'The Wood Wide Web: The Secret Social Life of Forests'
 description: Some random article
+topics: [foo, bar]
 date: 2025-12-14
 draft: false
 ---
