--- a/content/(content)/articles/example.mdx
+++ b/content/(content)/articles/example.mdx
@@ -10,6 +10,18 @@ When you walk through a forest, you might see trees as solitary individuals, com
 
 Scientists call this the **Mycorrhizal Network**, but it is more affectionately known as the "Wood Wide Web."
 
+## Image Examples
+
+Here are examples of how to include images in articles:
+
+### Standard Image
+
+![Forest mycorrhizal network](https://images.unsplash.com/photo-1542273917363-3b1817f69a2d?w=800&q=80)
+
+### Image with Caption
+
+![Underground forest root system](https://images.unsplash.com/photo-1511497584788-876760111969?w=800&q=80 'The intricate underground network of tree roots and fungi')
+
 ## The Hidden Infrastructure
 
 Beneath the forest floor lies a complex web of fungi called **mycelium**. These are not the mushrooms you see on the surface (which are merely the "fruit" of the fungus), but rather tiny, thread-like filaments that spread across miles of soil.
@@ -80,13 +92,13 @@ Here are some code examples showing different syntax highlighting features:
 
 This is a highlighted inline code: `console.log("hello world"){:js}`.
 
-### Basic
+### Basic (with Breakout)
 
 ```js
 console.log('Hello World');
 ```
 
-```ts
+```ts breakout
 // Using 'typeof' to infer types
 const person = { name: 'Alice', age: 30 };
 type PersonType = typeof person; // { name: string; age: number }
