--- a/content/misc/privacy.mdx
+++ b/content/misc/privacy.mdx
@@ -2,6 +2,8 @@
 title: Datenschutzerklärung
 ---
 
+# Datenschutzerklärung
+
 In dieser Datenschutzerklärung informieren wir Sie über die Verarbeitung personenbezogener Daten bei der Nutzung dieser Website.
 
 ## 1. Verantwortlicher
@@ -13,7 +15,7 @@ Neumatten 4<br/>
 79232 March<br/>
 Deutschland
 
-### Kontakt:
+### Kontakt
 
 **E-Mail:** sebastian.sebald@gmail.com
 
@@ -21,7 +23,7 @@ Deutschland
 
 Personenbezogene Daten sind alle Informationen, die sich auf eine identifizierte oder identifizierbare natürliche Person (betroffene Person) beziehen. Als identifizierbar wird eine natürliche Person angesehen, die direkt oder indirekt, insbesondere mittels Zuordnung zu einer Kennung wie einem Namen, zu einer Kennnummer, zu Standortdaten, zu einer Online-Kennung oder zu einem oder mehreren besonderen Merkmalen identifiziert werden kann, die Ausdruck der physischen, physiologischen, genetischen, psychischen, wirtschaftlichen, kulturellen oder sozialen Identität dieser natürlichen Person sind.
 
-## 3. Daten beim Websiteaufruf (Server-Log-Files)
+## 3. Daten beim Websiteaufruf
 
 Wenn Sie diese Website nur nutzen, um sich zu informieren und keine Daten angeben, dann verarbeiten wir nur die Daten, die zur Anzeige der Website auf dem von Ihnen verwendeten internetfähigen Gerät erforderlich sind. Das sind insbesondere:
 
@@ -36,16 +38,60 @@ Rechtsgrundlage für die Verarbeitung dieser Daten sind berechtigte Interessen g
 
 ## 4. Hosting (Vercel)
 
-Wir nutzen für das Hosting dieser Website den Anbieter **Vercel Inc.** (340 S Lemon Ave #4133, Walnut, CA 91789, USA).
+Wir nutzen für das Hosting dieser Website den Anbieter Vercel Inc. (340 S Lemon Ave #4133, Walnut, CA 91789, USA).
 
 Das bedeutet, dass die oben genannten Daten beim Websiteaufruf auf den Servern von Vercel verarbeitet werden. Da wir den kostenfreien Tarif ("Hobby-Plan") nutzen, werden Daten (insbesondere durch sogenannte Serverless Functions) standardmäßig auch auf Servern in den USA verarbeitet.
 
-**Datenübermittlung in die USA**
+#### Datenübermittlung in die USA
+
 Die Datenübermittlung in die USA stützt sich auf das **EU-US Data Privacy Framework (DPF)**. Das DPF ist ein Übereinkommen zwischen der Europäischen Union und den USA, das die Einhaltung europäischer Datenschutzstandards bei Datenverarbeitungen in den USA gewährleisten soll. Vercel ist unter dem DPF zertifiziert.
 
-**Rechtsgrundlage**
+#### Rechtsgrundlage
+
 Die Nutzung von Vercel erfolgt im Interesse einer sicheren, schnellen und effizienten Bereitstellung unseres Online-Angebots durch einen professionellen Anbieter (Art. 6 Abs. 1 lit. f DSGVO).
 
 ## 5. Einsatz von Cookies
 
-Beim Besuch der Website können Cookies auf Ihrem Gerät gespeichert werden. Cookies sind kleine Text
+Beim Besuch der Website können Cookies auf Ihrem Gerät gespeichert werden. Cookies sind kleine Textdateien, die von dem von Ihnen verwendeten Browser gespeichert werden. Cookies können keine Programme ausführen und auch keine Viren auf Ihr Gerät übertragen. Die Stelle, die den Cookie setzt, kann darüber jedoch bestimmte Informationen erhalten. So kann mithilfe von Cookies insbesondere das Gerät, mit dem diese Website aufgerufen wurde, bei einem erneuten Aufruf erkannt werden.
+
+Durch die Browsereinstellungen lässt sich das Setzen von Cookies einschränken oder verhindern. So kann z. B. nur die Annahme von Cookies, die von Drittanbietern stammen, blockiert werden oder aber auch die Annahme von allen Cookies. Durch das Blockieren sind jedoch möglicherweise nicht mehr alle Funktionen dieser Website nutzbar.
+
+Vor dem Einsatz von Google Analytics holen wir Ihre Einwilligung über ein Cookie-Banner ein.
+
+## 6. Datenschutzerklärung für Google Analytics
+
+Auf dieser Website wird Google Analytics eingesetzt, ein Webanalysedienst der Google Ireland Limited, Gordon House, Barrow Street, Dublin 4, Irland (Mutterunternehmen: Google LLC, 1600 Amphitheatre Parkway, Mountain View, CA 94043, USA).
+
+Zu diesem Zweck werden von Google Cookies auf dem Gerät gesetzt. Diese ermöglichen eine Analyse Ihrer Website-Nutzung. Die dabei erfassten Informationen werden in der Regel an Server von Google übermittelt, die sich insbesondere in den USA befinden. Google Analytics speichert IP-Adressen nur anonymisiert. Google kürzt vor der Speicherung die innerhalb von Mitgliedstaaten der Europäischen Union oder in anderen Vertragsstaaten des Abkommens über den Europäischen Wirtschaftsraum erfassten IP-Adressen. Google nutzt die gesammelten Informationen, um die Nutzung der Webseiten auszuwerten und entsprechende Berichte zu erstellen.
+
+#### Speicherdauer
+
+Google Analytics ist so eingestellt, dass Ereignisdaten nach **2 Monaten** gelöscht werden. Sonstige nutzerbezogene Daten werden nach spätestens **14 Monaten** automatisch gelöscht.
+
+#### Rechtsgrundlage
+
+Die Verarbeitung der Daten erfolgt auf Grundlage von Art. 6 Abs. 1 lit. a) DSGVO mit Ihrer Einwilligung. Mit Google wurde ein Vertrag zur Auftragsverarbeitung abgeschlossen. Soweit Daten in die USA übermittelt werden, stützt sich dies auf das EU-US Data Privacy Framework, für das Google zertifiziert ist.
+
+#### Widerruf der Einwilligung
+
+Sie können Ihre Einwilligung jederzeit mit Wirkung für die Zukunft widerrufen. Nutzen Sie hierfür bitte den Link **„Cookie-Einstellungen“** im Footer dieser Website oder ändern Sie Ihre Auswahl direkt hier:
+
+<a href="#" id="open-cookie-settings">
+  Cookie-Einstellungen anpassen
+</a>
+
+Alternativ können Sie die Cookies in Ihrem verwendeten Browser löschen. Ein Opt-out ist zudem mit folgendem Browser-Add-on möglich: https://tools.google.com/dlpage/gaoptout/
+
+Weitere Informationen zum Datenschutz von Google finden Sie unter: https://policies.google.com/privacy?hl=de
+
+## 7. Ihre Rechte
+
+Als betroffene Person haben Sie folgende Rechte:
+
+- **Auskunft:** Sie haben ein Auskunftsrecht bezüglich der Sie betreffenden personenbezogenen Daten, die der Verantwortliche verarbeitet (Art. 15 DSGVO).
+- **Berichtigung:** Sie haben das Recht auf Berichtigung der Sie betreffenden Daten, wenn diese unrichtig oder unvollständig gespeichert werden (Art. 16 DSGVO).
+- **Löschung:** Sie haben das Recht auf Löschung Ihrer Daten (Art. 17 DSGVO).
+- **Einschränkung:** Sie haben das Recht, die Einschränkung der Verarbeitung Ihrer personenbezogenen Daten zu verlangen (Art. 18 DSGVO).
+- **Datenübertragbarkeit:** Sie haben das Recht auf Datenübertragbarkeit (Art. 20 DSGVO).
+- **Widerspruch:** Sie haben ein Widerspruchsrecht gegen die Verarbeitung der Sie betreffenden personenbezogenen Daten (Art. 21 DSGVO).
+- **Beschwerde:** Sie haben das Recht, sich bei einem vermuteten Verstoß gegen das Datenschutzrecht bei der zuständigen Aufsichtsbehörde zu beschweren (Art. 77 DSGVO). Zuständig ist die Aufsichtsbehörde an Ihrem üblichen Aufenthaltsort, Arbeitsplatz oder am Ort des vermuteten Verstoßes.
