--- a/content/misc/privacy.mdx
+++ b/content/misc/privacy.mdx
@@ -74,9 +74,7 @@ Die Verarbeitung der Daten erfolgt auf Grundlage von Art. 6 Abs. 1 lit. a) DSGVO
 
 Sie können Ihre Einwilligung jederzeit mit Wirkung für die Zukunft widerrufen. Nutzen Sie hierfür bitte den Link **„Cookie-Einstellungen“** im Footer dieser Website oder ändern Sie Ihre Auswahl direkt hier:
 
-<a href="#" id="open-cookie-settings">
-  Cookie-Einstellungen anpassen
-</a>
+<ConsentUpdate locale="de" />
 
 Alternativ können Sie die Cookies in Ihrem verwendeten Browser löschen. Ein Opt-out ist zudem mit folgendem Browser-Add-on möglich: https://tools.google.com/dlpage/gaoptout/
 
