--- a/content/misc/imprint.mdx
+++ b/content/misc/imprint.mdx
@@ -2,6 +2,8 @@
 title: Impressum
 ---
 
+_Note: As I am based in Germany, the following legal notice (Impressum) is provided in German to ensure compliance with local laws (§ 5 DDG)._
+
 ## Angaben gemäß § 5 DDG
 
 Sebastian Sebald<br/>
