--- a/content/lab/minimum-touch-compliance.mdx
+++ b/content/lab/minimum-touch-compliance.mdx
@@ -1,5 +1,5 @@
 ---
-title: Tailwind Utility for Minimum Touch Compliance
+title: Utility for Minimum Touch Compliance
 description: Expand touch targets to meet WCAG standards without breaking compact UI layouts.
 date: 2026-01-01
 ---
