--- a/content/misc/privacy.mdx
+++ b/content/misc/privacy.mdx
@@ -76,7 +76,7 @@ Die Verarbeitung der Daten erfolgt auf Grundlage von Art. 6 Abs. 1 lit. a) DSGVO
 
 Sie können Ihre Einwilligung jederzeit mit Wirkung für die Zukunft widerrufen. Nutzen Sie hierfür bitte den Link **„Cookie-Einstellungen“** im Footer dieser Website oder ändern Sie Ihre Auswahl direkt hier:
 
-<ConsentUpdate locale="de" triggerVariant="link" />
+<ConsentUpdate locale="de" triggerVariant="secondary" />
 
 Alternativ können Sie die Cookies in Ihrem verwendeten Browser löschen. Ein Opt-out ist zudem mit folgendem Browser-Add-on möglich: https://tools.google.com/dlpage/gaoptout/
 
