--- a/content/misc/privacy.mdx
+++ b/content/misc/privacy.mdx
@@ -2,7 +2,11 @@
 title: Datenschutzerklärung
 ---
 
-_Note: The following privacy policy is provided in German to ensure strict compliance with the GDPR (DSGVO) and local requirements. If you have specific questions about your data, feel free to contact me in English._
+<Callout title="Note">
+  The following privacy policy is provided in German to ensure strict compliance
+  with the GDPR (DSGVO) and local requirements. If you have specific questions
+  about your data, feel free to contact me in English.
+</Callout>
 
 In dieser Datenschutzerklärung informieren wir Sie über die Verarbeitung personenbezogener Daten bei der Nutzung dieser Website.
 
