--- a/content/notes/failing-forward/index.mdx
+++ b/content/notes/failing-forward/index.mdx
@@ -5,6 +5,6 @@ topics: [design-systems]
 date: 2026-02-07
 ---
 
-Usually, when talking about design systems, we start with our Figma library, component library, and design tokens. We reduce it to a collection of artifacts. We think it is a tidy library of buttons, inputs, and colors that sit nicely in a repository. It feels good to organize these things. It feels like control. It is clean, organized, and theoretical.
+The way we usually talk about design systems, you'd think they are just a collection of well-organized artifacts. Here's the Figma library. Here's the component repo. Here are the design tokens. Everything labeled, everything documented, everything in its place. It feels good to organize these things. It is clean, organized and manageable. It feels like control.
 
 But that feeling is an illusion.
