--- a/content/notes/failing-forward/index.mdx
+++ b/content/notes/failing-forward/index.mdx
@@ -8,3 +8,17 @@ date: 2026-02-07
 The way we usually talk about design systems, you'd think they are just a collection of well-organized artifacts. Here's the Figma library. Here's the component repo. Here are the design tokens. Everything labeled, everything documented, everything in its place. It feels good to organize these things. It is clean, organized and manageable. It feels like control.
 
 But that feeling is an illusion.
+
+Over four years, my team and I built a design system for a product with over 15 years of history and all the legacy baggage that comes with it. The assumptions we started with turned out to be wrong. But each time one broke, it pushed us somewhere better.
+
+---
+
+1. Intro (done) → rug pull
+2. The territory we inherited — Reservix context, the mess, "we can't build that"
+3. Building the map — component library, greenfield win, we thought we nailed it
+4. Crickets — nobody cares, people problem not tech problem
+5. Meeting them where they were — the pivot, internal sales, paving desire paths
+6. The trap — adoption grows, numbers look great... but inconsistency remains
+7. Bricks without blueprints — components vs patterns, this is where "map is not the territory" hits
+8. What a design system actually is — the real definition, the service mindset
+9. Failing forward — the takeaways
