--- a/content/notes/failing-forward/index.mdx
+++ b/content/notes/failing-forward/index.mdx
@@ -9,7 +9,9 @@ The way we usually talk about design systems, you'd think they are just a collec
 
 But that feeling is an illusion.
 
-Over four years, my team and I built a design system for a product with over 15 years of history and all the legacy baggage that comes with it. The assumptions we started with turned out to be wrong. But each time one broke, it pushed us somewhere better.
+Over four years, my team and I built a design system for a product with over 20 years of history and all the legacy baggage that comes with it. Most of the assumptions we started with turned out to be wrong. But each time one broke, it pushed us somewhere better.
+
+## The territory we inherited
 
 ---
 
