--- a/content/notes/failing-forward/index.mdx
+++ b/content/notes/failing-forward/index.mdx
@@ -13,6 +13,12 @@ Over four years, my team and I built a design system for a product with over 20 
 
 ## The territory we inherited
 
+The product was capable. Really capable. But you wouldn't know it by looking at it. The UI felt dated. If you judged the product by its interface, as most people do, you would severely underestimate what it could do.
+
+This wasn't a failure of effort. Teams were working hard. But they were spending most of their energy extinguishing fires caused by decisions made years earlier. Technical debt had compounded to the point where even small UI changes felt risky. "We can't build that" became a reflex. Not because the developers lacked skill, but because the tooling and the codebase had made ambition expensive. Designers kept pushing forward. The codebase kept holding everyone back.
+
+The plan was to split the monolithic software into multiple standalone products. The hope was that this would bring both technical and organizational benefits. Smaller codebases, independent teams, modern stacks. A design system seemed like the natural foundation for this new world. Shared components, shared language, shared quality.
+
 ---
 
 1. Intro (done) → rug pull
