--- a/content/notes/failing-forward/index.mdx
+++ b/content/notes/failing-forward/index.mdx
@@ -17,7 +17,43 @@ The product was capable. Really capable. But you wouldn't know it by looking at 
 
 This wasn't a failure of effort. Teams were working hard. But they were spending most of their energy extinguishing fires caused by decisions made years earlier. Technical debt had compounded to the point where even small UI changes felt risky. "We can't build that" became a reflex. Not because the developers lacked skill, but because the tooling and the codebase had made ambition expensive. Designers kept pushing forward. The codebase kept holding everyone back.
 
+{/* Follow paragraph needs work, more connection, to harsh start. */}
+
 The plan was to split the monolithic software into multiple standalone products. The hope was that this would bring both technical and organizational benefits. Smaller codebases, independent teams, modern stacks. A design system seemed like the natural foundation for this new world. Shared components, shared language, shared quality.
+
+## Building the map
+
+So we put together a small team to build the foundation. We bootstrapped a component library with a modern tech stack. The design was based on a previous exploration that had already been approved but never made it into production. We could focus entirely on building.
+
+Around the same time, one of the product teams was about to rebuild their product from the ground up. We jumped on the opportunity. A greenfield environment. No legacy constraints. No compromises. The perfect test case.
+
+And it worked. The pilot team delivered something we were genuinely proud of. Components that used to take days to build from scratch were now available out of the box. There were growing pains, but that was expected. We had proven that the approach could work. We high-fived each other and prepared to roll it out to the rest of the company.
+
+## Crickets
+
+We had proven it could work. We had a real product to point at. But the rest of the company wasn't interested. The plan to split the monolith into standalone products never gained traction. The majority of the company was still fully invested in the legacy system, and there was no sign of that changing. We hadn't anticipated this. We had built for a future that the organization wasn't moving toward.
+
+When we showed up with our shiny new component library, our colleagues looked at their workload and said "I don't have time to learn this." They weren't being difficult. They were being rational. The cost of adopting something new felt impossibly high when you're already struggling to keep up.
+
+## Meeting them where they were
+
+We had to rethink everything. Our entire approach assumed that teams would come to us once they saw what was possible. That assumption was wrong. If they couldn't come to us, we had to go to them.
+
+We brought the design system into the legacy system. We matched the visual style so that anything built with the new components was indistinguishable from the old code. Under the hood, developers were working with modern tools.
+
+Then we focused on making the transition as painless as possible for colleagues. We wrote guides. We gave training sessions. We improved their dev environments. Small things, but small things add up.
+
+Most importantly, we showed up. We sat with teams. We helped them through their first components, their first pages, their first bugs. We weren't a library they could install. We were a team they could call.
+
+## The trap
+
+It worked. The narrative slowly shifted from "we can't build that" to "we can build that... most likely." One team after another started using the design system. It spread on its own. In product demos, more and more features were being built with our components. The numbers looked great.
+
+So we did it, right?
+
+Not quite. The adoption numbers looked great, but teams were still building inconsistent interfaces. Same buttons, same inputs, same building blocks. The pages they built with them looked nothing alike.
+
+We had given them the bricks. We hadn't shown them how the pieces fit together.
 
 ---
 
@@ -30,3 +66,7 @@ The plan was to split the monolithic software into multiple standalone products.
 7. Bricks without blueprints — components vs patterns, this is where "map is not the territory" hits
 8. What a design system actually is — the real definition, the service mindset
 9. Failing forward — the takeaways
+
+TODO:
+
+- do not mention territory and map in headlines?
