--- a/content/notes/failing-forward/index.mdx
+++ b/content/notes/failing-forward/index.mdx
@@ -49,7 +49,7 @@ Most importantly, we showed up. We sat with teams. We helped them through their 
 
 It worked. The narrative slowly shifted from "we can't build that" to "we can build that... most likely." One team after another started using the design system. It spread on its own. In product demos, more and more features were being built with our components. The numbers looked great.
 
-So we did it, right?
+So yay! We did it! ...right?
 
 Not quite. The adoption numbers looked great, but teams were still building inconsistent interfaces. Same buttons, same inputs, same building blocks. The pages they built with them looked nothing alike.
 
