--- a/content/notes/failing-forward/index.mdx
+++ b/content/notes/failing-forward/index.mdx
@@ -53,7 +53,17 @@ So yay! We did it! ...right?
 
 Not quite. The adoption numbers looked great, but teams were still building inconsistent interfaces. Same buttons, same inputs, same building blocks. The pages they built with them looked nothing alike.
 
+{/* shorten or merge the following two paragraphs? */}
+
 We had given them the bricks. We hadn't shown them how the pieces fit together.
+
+The support we gave our colleagues worked. They knew how to use the components. They were productive. But knowing how to use a tool is not the same as knowing how to build with it. We had taught them how to work with the system but the system itself had little opinion about how the pieces should come together. Every team made their own decisions about layout, validation, error handling, and flow. They all used the same components and arrived at results that were close, but never quite consistent.
+
+So we pivoted again. We overhauled the documentation. We shifted from describing what components can do to explaining how to combine them. We focused on patterns. Common use cases, recurring user flows, opinionated guidance about how the pieces fit together.
+
+## ???
+
+First we enabled teams to build modern UIs. Then we integrated into the legacy system and trained our colleagues how to use the new tools. Now we were teaching them how to combine components to build great user experiences. Each step only became visible after the previous one had run its course.
 
 ---
 
