--- a/content/notes/failing-forward/index.mdx
+++ b/content/notes/failing-forward/index.mdx
@@ -17,9 +17,7 @@ The product was capable. Really capable. But you wouldn't know it by looking at 
 
 This wasn't a failure of effort. Teams were working hard. But they were spending most of their energy extinguishing fires caused by decisions made years earlier. Technical debt had compounded to the point where even small UI changes felt risky. "We can't build that" became a reflex. Not because the developers lacked skill, but because the tooling and the codebase had made ambition expensive. Designers kept pushing forward. The codebase kept holding everyone back.
 
-{/* Follow paragraph needs work, more connection, to harsh start. */}
-
-The plan was to split the monolithic software into multiple standalone products. The hope was that this would bring both technical and organizational benefits. Smaller codebases, independent teams, modern stacks. A design system seemed like the natural foundation for this new world. Shared components, shared language, shared quality.
+Something had to give. The plan was to split the monolithic software into multiple standalone products. The hope was that this would bring both technical and organizational benefits. Smaller codebases, independent teams, modern stacks. A design system seemed like the natural foundation for this new world. Shared components, shared language, shared quality.
 
 ## Building the map
 
@@ -53,11 +51,7 @@ So yay! We did it! ...right?
 
 Not quite. The adoption numbers looked great, but teams were still building inconsistent interfaces. Same buttons, same inputs, same building blocks. The pages they built with them looked nothing alike.
 
-{/* shorten or merge the following two paragraphs? */}
-
-We had given them the bricks. We hadn't shown them how the pieces fit together.
-
-The support we gave our colleagues worked. They knew how to use the components. They were productive. But knowing how to use a tool is not the same as knowing how to build with it. We had taught them how to work with the system but the system itself had little opinion about how the pieces should come together. Every team made their own decisions about layout, validation, error handling, and flow. They all used the same components and arrived at results that were close, but never quite consistent.
+Our colleagues knew how to use the components. They were productive. But knowing how to use a component is not the same as knowing how to combine them. The system itself had little opinion about how things should come together. Teams approached the same user flows differently. They all used the same components and arrived at results that were close, but never quite consistent.
 
 So we pivoted again. We overhauled the documentation. We shifted from describing what components can do to explaining how to combine them. We focused on patterns. Common use cases, recurring user flows, opinionated guidance about how the pieces fit together.
 
