--- a/content/notes/failing-forward/index.mdx
+++ b/content/notes/failing-forward/index.mdx
@@ -63,9 +63,7 @@ There is a concept that explains why this kept happening: the map is not the ter
 
 Your documentation, your Figma library, your component playground: that is the map. It represents how the UI should look and behave in a clean, theoretical environment. It is organized, it makes sense, it makes you feel like you've got things figured out.
 
-The territory is everything else. Messy CSS overrides in a codebase that has grown for over twenty years. Tight deadlines that force shortcuts. Habits your colleagues have built up over a decade of doing things a certain way. The political capital it costs to get a refactor approved.
-
-Every time we thought we had it figured out, we were looking at our map and mistaking it for the territory. We built a modern component library and assumed teams would adopt it. The map said they should. The territory said they couldn't. We integrated into the legacy system and watched the adoption numbers climb. The map said we were succeeding. The territory said the products still looked inconsistent.
+The territory is the reality. Messy CSS overrides in a codebase that has grown for over twenty years. Tight deadlines that force teams to take shortcuts. Habits your colleagues have built up over a decade of doing things a certain way. The political capital it costs to get a refactor approved.
 
 The map is how you think work gets done. The territory is the path people actually take.
 
