--- a/content/notes/failing-forward/index.mdx
+++ b/content/notes/failing-forward/index.mdx
@@ -65,9 +65,7 @@ Your documentation, your Figma library, your component playground: that is the m
 
 The territory is the reality. Messy CSS overrides in a codebase that has grown for over twenty years. Tight deadlines that force teams to take shortcuts. Habits your colleagues have built up over a decade of doing things a certain way. The political capital it costs to get a refactor approved.
 
-The map is how you think work gets done. The territory is the path people actually take.
-
-## What we were actually building
+## A design system is a service
 
 Looking back, the most valuable thing we built was not the component library. It was not the documentation or the patterns either.
 
@@ -77,9 +75,11 @@ Every pivot forced us closer to the people using our system. First we built comp
 
 The intro to this article describes design systems as "a collection of well-organized artifacts." That is the map. The territory is that a design system is a service. It is the training session on a Tuesday afternoon. It is the message at 4pm when someone is stuck on a layout. It is the decision to match the legacy style instead of forcing something new. It is showing up, again and again.
 
+Components age. Documentation goes stale. Patterns evolve as the product changes. The service is what carries all of it forward. When teams trust you to show up, to listen, to adapt, they give you the room to get things wrong and try again. That is what kept our design system alive through three pivots. Not the quality of our code, but the relationship we had built with the people using it.
+
 ## Failing forward
 
-None of this was planned. We did not sit down at the start and sketch out three pivots. Each one happened because something broke. And each time something broke, it revealed what the system actually needed to become.
+None of this was planned. We did not sit down at the start and sketch out three pivots. Each one happened because we get stuck. And each time we got stuck, it revealed what the system actually needed to become.
 
 If we hadn't been ignored by the legacy teams, we would never have invested so heavily in developer experience and support. If adoption hadn't produced inconsistent interfaces, we would never have discovered that patterns matter more than components.
 
