--- a/content/notes/failing-forward/index.mdx
+++ b/content/notes/failing-forward/index.mdx
@@ -57,11 +57,9 @@ So we pivoted again. We overhauled the documentation. We shifted from describing
 
 ## Failing forward
 
-First we enabled teams to build modern UIs. Then we brought a modern frontend environment to the legacy system and taught our colleagues how to use it. Now we were teaching them how to combine components to build great user experiences. Every progress we made was met with an obstacles rather sooner than later. This felt super harsh during the time. Sometimes even like a setback or like we moved in the complete wrong direction.
+There is a concept that explains why every step forward felt like running into a wall: the map is not the territory. The description of a thing is not the thing itself. It sounds obvious, but it is remarkably easy to spend all your energy perfecting the map while losing sight of the territory it is supposed to represent.
 
-There is a concept that explains why this kept happening: the map is not the territory. The description of a thing is not the thing itself. A road map does not show you the traffic. It sounds obvious, but it is remarkably easy to spend all your energy perfecting the map while losing sight of the territory it is supposed to represent.
-
-Your documentation, your Figma library, your component playground: that is the map. It represents how the UI should look and behave in a clean, theoretical environment. It is organized, it makes sense, it makes you feel like you've got things figured out.
+Your documentation, your Figma library, your component playground: that is the map. Organized, sensible, controlled.
 
 The territory is the reality. Messy CSS overrides in a codebase that has grown for over twenty years. Tight deadlines that force teams to take shortcuts. Habits your colleagues have built up over a decade of doing things a certain way. The political capital it costs to get a refactor approved.
 
@@ -71,12 +69,8 @@ It was trust.
 
 Every pivot forced us closer to the people using our system. First we built components and waited for teams to show up. Then we went to their codebases and integrated. Then we sat with them and trained them. Then we listened to what still wasn't working and changed our approach again.
 
-None of this was planned. We did not sit down at the start and sketch out three pivots. Each one happened because we get stuck. And each time we got stuck, it revealed what the system actually needed to become.
+None of this was planned. We did not sit down at the start and sketch out three pivots. Each one happened because we got stuck. And each time we got stuck, it revealed what the system actually needed to become. If we hadn't been ignored by the legacy teams, we would never have invested so heavily in developer experience and support. If adoption hadn't produced inconsistent interfaces, we would never have discovered that patterns matter more than components.
 
-If we hadn't been ignored by the legacy teams, we would never have invested so heavily in developer experience and support. If adoption hadn't produced inconsistent interfaces, we would never have discovered that patterns matter more than components.
+The obstacles were never in the way. They were showing us the way.
 
-The obstacles were not in the way. They were the way.
-
-Building a design system is not a straight line from a Figma file to a component library to a dashboard full of adoption metrics. It is an ongoing conversation between what you think teams need and what they actually need. Sometimes the only way to learn the difference is to get it wrong, listen, and adjust.
-
-We are still adjusting. The story doesn't have a tidy ending because the territory keeps changing.
+Building a design system is not a straight line from a Figma file to a component library to a dashboard full of adoption metrics. It is an ongoing conversation between what you think teams need and what they actually need. The only way to learn the difference is to get it wrong, listen, and adjust. We are still adjusting. The territory keeps changing.
