--- a/content/notes/failing-forward/index.mdx
+++ b/content/notes/failing-forward/index.mdx
@@ -57,19 +57,13 @@ So we pivoted again. We overhauled the documentation. We shifted from describing
 
 ## Failing forward
 
-There is a concept that explains why every step forward felt like running into a wall: the map is not the territory. The description of a thing is not the thing itself. It sounds obvious, but it is remarkably easy to spend all your energy perfecting the map while losing sight of the territory it is supposed to represent.
-
-Your documentation, your Figma library, your component playground: that is the map. Organized, sensible, controlled.
-
-The territory is the reality. Messy CSS overrides in a codebase that has grown for over twenty years. Tight deadlines that force teams to take shortcuts. Habits your colleagues have built up over a decade of doing things a certain way. The political capital it costs to get a refactor approved.
-
-Looking back, the most valuable thing we built was not the component library. It was not the documentation or the patterns either.
+At the time, none of this felt like progress. It felt like we kept getting it wrong. But every pivot, every adjustment, forced us closer to the most valuable thing we would build. Not the component library. Not the documentation. Not the patterns.
 
 It was trust.
 
-Every pivot forced us closer to the people using our system. First we built components and waited for teams to show up. Then we went to their codebases and integrated. Then we sat with them and trained them. Then we listened to what still wasn't working and changed our approach again.
-
 None of this was planned. We did not sit down at the start and sketch out three pivots. Each one happened because we got stuck. And each time we got stuck, it revealed what the system actually needed to become. If we hadn't been ignored by the legacy teams, we would never have invested so heavily in developer experience and support. If adoption hadn't produced inconsistent interfaces, we would never have discovered that patterns matter more than components.
+
+There is a reason this kept happening: we were confusing the map for the territory. Your documentation, your Figma library, your component playground: that is the map. Organized, sensible, controlled. The territory is the reality. Messy CSS overrides in a codebase that has grown for over twenty years. Tight deadlines that force teams to take shortcuts. Habits your colleagues have built up over a decade of doing things a certain way.
 
 The obstacles were never in the way. They were showing us the way.
 
