--- a/content/notes/failing-forward/index.mdx
+++ b/content/notes/failing-forward/index.mdx
@@ -61,7 +61,7 @@ At the time, none of this felt like progress. It felt like we kept getting it wr
 
 It was trust.
 
-None of this was planned. We did not sit down at the start and sketch out three pivots. Each one happened because we got stuck. And each time we got stuck, it revealed what the system actually needed to become. If we hadn't been ignored by the legacy teams, we would never have invested so heavily in developer experience and support. If adoption hadn't produced inconsistent interfaces, we would never have discovered that patterns matter more than components.
+None of this was planned. We did not sit down at the start and map out every turn. Each change in direction happened because we got stuck. And each time we got stuck, it revealed what the system actually needed to become. If we hadn't been ignored by the teams working on the legacy system, we would never have invested so heavily in developer experience and support. If adoption hadn't produced inconsistent interfaces, we would never have discovered that patterns matter more than components.
 
 There is a reason this kept happening: we were confusing the map for the territory. Your documentation, your Figma library, your component playground: that is the map. Organized, sensible, controlled. The territory is the reality. Messy CSS overrides in a codebase that has grown for over twenty years. Tight deadlines that force teams to take shortcuts. Habits your colleagues have built up over a decade of doing things a certain way.
 
