--- a/content/notes/failing-forward/index.mdx
+++ b/content/notes/failing-forward/index.mdx
@@ -57,13 +57,13 @@ So we pivoted again. We overhauled the documentation. We shifted from describing
 
 ## Failing forward
 
-At the time, none of this felt like progress. It felt like we kept getting it wrong. But every pivot, every adjustment, forced us closer to the most valuable thing we would build. Not the component library. Not the documentation. Not the patterns.
+At the time, none of this felt like progress. It felt like we kept getting it wrong. But every pivot, every adjustment, forced us closer to the most valuable thing we would build. Turns out, it wans't the component library, the documentation, or the patterns.
 
 It was trust.
 
-None of this was planned. We did not sit down at the start and map out every turn. Each change in direction happened because we got stuck. And each time we got stuck, it revealed what the system actually needed to become. If we hadn't been ignored by the teams working on the legacy system, we would never have invested so heavily in developer experience and support. If adoption hadn't produced inconsistent interfaces, we would never have discovered how much patterns matter.
+None of this was planned. We did not sit down at the start and map out every turn. Each change in direction happened because we got stuck. And each time we got stuck, we were forced closer to the people using our system. That is where trust came from. Not from a rollout plan, but from showing up, listening, and adjusting.
 
-There is a reason this kept happening: we were confusing the map for the territory. Your documentation, your Figma library, your component playground: that is the map. Organized, sensible, controlled. The territory is the reality. Messy CSS overrides in a codebase that has grown for over twenty years. Tight deadlines that force teams to take shortcuts. Habits your colleagues have built up over a decade of doing things a certain way.
+There is a reason we kept getting stuck: we were confusing the map for the territory. Your documentation, your Figma library, your component playground: that is the map. Organized, sensible, controlled. The territory is the reality. Messy CSS overrides in a codebase that has grown for over twenty years. Tight deadlines that force teams to take shortcuts. Habits your colleagues have built up over a decade of doing things a certain way. If we hadn't been ignored by the teams working on the legacy system, we would never have invested so heavily in developer experience and support. If adoption hadn't produced inconsistent interfaces, we would never have discovered how much patterns matter.
 
 The obstacles were never in the way. They were showing us the way.
 
