--- a/content/notes/failing-forward/index.mdx
+++ b/content/notes/failing-forward/index.mdx
@@ -2,6 +2,7 @@
 title: Failing Forward at Design Systems
 description: Building a design system is not as straightforward as it seems. The obstacles along the way are chances to build something truly valuable.
 topics: [design-systems]
+image: ./1.webp
 date: 2026-02-07
 ---
 
@@ -9,7 +10,9 @@ The way we usually talk about design systems, you'd think they are just a collec
 
 But that feeling is an illusion.
 
-Over four years, my team and I built a design system for a product with over 20 years of history and all the legacy baggage that comes with it. Most of the assumptions we started with turned out to be wrong. But each time one broke, it pushed us somewhere better.
+A lot of building a design system has surprisingly little to do with the artifacts. It is about navigating the messy, human reality of how teams actually build software. And that reality will humble you.
+
+Over past four years, my team and I built a design system for a product with over 20 years of history and all the legacy baggage that comes with it. Most of the assumptions we started with turned out to be wrong. But each time one broke, it pushed us somewhere better.
 
 ## The territory we inherited
 
