--- a/content/notes/failing-forward/index.mdx
+++ b/content/notes/failing-forward/index.mdx
@@ -2,17 +2,17 @@
 title: Failing Forward at Design Systems
 description: Building a design system is not as straightforward as it seems. The obstacles along the way are chances to build something truly valuable.
 topics: [design-systems]
-image: ./1.webp
+image: [./1.webp, ./2.webp, ./3.webp]
 date: 2026-02-07
 ---
 
-The way we usually talk about design systems, you'd think they are just a collection of well-organized artifacts. Here's the Figma library. Here's the component repo. Here are the design tokens. Everything labeled, everything documented, everything in its place. It feels good to organize these things. It is clean, organized and manageable. It feels like control.
+The way we usually talk about design systems, you'd think they are just a collection of well-organized artifacts. Here's the Figma library. Here's the component repo. Here are the design tokens. Everything labeled, everything documented, everything in its place. It feels good to organize these things. It is clean, structured and manageable. It feels like your are in control.
 
-But that feeling is an illusion.
+But it's an illusion.
 
-A lot of building a design system has surprisingly little to do with the artifacts. It is about navigating the messy, human reality of how teams actually build software. And that reality will humble you.
+A lot of building a design system has little to do with the artifacts. It is about navigating the messy, human reality of how teams actually build software.
 
-Over past four years, my team and I built a design system for a product with over 20 years of history and all the legacy baggage that comes with it. Most of the assumptions we started with turned out to be wrong. But each time one broke, it pushed us somewhere better.
+Over past four years, my team and I built a design system for a product with over 20 years of history and all the legacy baggage that comes with it. Most of the assumptions we started with turned out to be wrong, but each time one broke, it pushed us somewhere better.
 
 ## The territory we inherited
 
